force-app/src/objects/OrderApi__GL_Account__c.object
<CustomObject>
    <description>GL Accounting codes used for linking debits and credits with the appropriate codes.</description>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <description>**Required** Master-Detail Relationship to Business Group.</description>
        <inlineHelpText>**Required** Master-Detail Relationship to Business Group.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Chart of Accounts</relationshipLabel>
        <relationshipName>GL_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>OrderApi__Detail__c</fullName>
        <description>Customize the detail pick-list to assist you in categorizing the GL Accounts in accounting reports.</description>
        <inlineHelpText>Customize the detail pick-list to assist you in categorizing the GL Accounts in accounting reports.</inlineHelpText>
        <label>Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OrderApi__Report_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Payable (A/P)</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable (A/R)</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Current Liabilities</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Long-term Liabilities</fullName>
                </value>
                <value>
                    <fullName>Other Assets</fullName>
                </value>
                <value>
                    <fullName>Other Current Assets</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Other Income</fullName>
                </value>
                <value>
                    <fullName>Cost of Goods Sold</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Other Expense</fullName>
                </value>
                <value>
                    <fullName>Contributions/Pledges Receivable</fullName>
                </value>
                <value>
                    <fullName>Other Receivables</fullName>
                </value>
                <value>
                    <fullName>Direct Contributions</fullName>
                </value>
                <value>
                    <fullName>Refunds Payable (R/P)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Report_Category__c</fullName>
        <description>**Do Not Modify Picklist Values** Select the appropriate report category for the GL Account.</description>
        <inlineHelpText>**Do Not Modify Picklist Values** Select the appropriate report category for the GL Account.</inlineHelpText>
        <label>Report Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Sheet</fullName>
                    <color>#0B6FCE</color>
                    <label>Balance Sheet</label>
                </value>
                <value>
                    <fullName>Income Statement</fullName>
                    <color>#78C953</color>
                    <default>true</default>
                    <label>Income Statement</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Type__c</fullName>
        <description>Select the appropriate type for the GL Account.</description>
        <inlineHelpText>Select the appropriate type for the GL Account.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OrderApi__Report_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Asset</fullName>
                    <color>#0B6FCE</color>
                    <label>Asset</label>
                </value>
                <value>
                    <fullName>Capital</fullName>
                    <color>#78C953</color>
                    <label>Capital</label>
                </value>
                <value>
                    <fullName>Cost of Goods Sold</fullName>
                    <color>#E27001</color>
                    <label>Cost of Goods Sold</label>
                </value>
                <value>
                    <fullName>Equity</fullName>
                    <color>#A845DC</color>
                    <label>Equity</label>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                    <color>#F3D904</color>
                    <label>Expenses</label>
                </value>
                <value>
                    <fullName>Income</fullName>
                    <color>#A53711</color>
                    <label>Income</label>
                </value>
                <value>
                    <fullName>Liability</fullName>
                    <color>#66E9BD</color>
                    <label>Liability</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GL Account</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Business_Group__c</columns>
        <columns>OrderApi__Report_Category__c</columns>
        <columns>OrderApi__Type__c</columns>
        <columns>OrderApi__Detail__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>